--- a/webio/src/config/config.properties
+++ b/webio/src/config/config.properties
@@ -1,6 +1,5 @@
-######## jskeyupload
+######## webio for jskeyupload
 webio.path=C:/WebIO
-#10485760
 webio.maxsize=20971520
 webio.image=jpg,jpeg,gif,png
 webio.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
