--- a/webio/web/Config/properties.config
+++ b/webio/web/Config/properties.config
@@ -1,12 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <settings>
-	<!--jskeyupload-->
-	<add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
-	<add key="jskey.upload.maxSize" value="10485760"/>
-	<add key="jskey.upload.image" value="jpg,jpeg,gif,png"/>
-	<add key="jskey.upload.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
-	
-	<!--web project config-->
-	<add key="jskey.upload.clear" value="true"/>
-	<add key="jskey.upload.timeout" value="21600000"/>
+	<!--webio for jskeyupload-->
+	<add key="webio.path" value="C:/WebIO"/>
+	<add key="webio.maxsize" value="20971520"/>
+	<add key="webio.image" value="jpg,jpeg,gif,png"/>
+	<add key="webio.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
 </settings>
