--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -36,5 +36,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="dswork.test"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
