--- a/Lib/.settings/org.eclipse.core.resources.prefs
+++ b/Lib/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//tomcat_memcached/\u57FA\u4E8EMemcached\u7684tomcat\u96C6\u7FA4\u975E\u7C98\u6027session\u5B9E\u73B0\u65B9\u6848.txt=GBK
 encoding/<project>=UTF-8
