--- a/xzsp/src/config/config.properties
+++ b/xzsp/src/config/config.properties
@@ -10,8 +10,10 @@ jdbc.password=dswork
 gov.xzsp.path=C:/DC_CLIENT
 
 gov.xzsp.step=100
-gov.xzsp.12=gz
-gov.xzsp.34=36
+gov.xzsp.area=gz
+gov.xzsp.org=36
+#for 2.2 gov.xzsp.org=36
+#for 2.3 gov.xzsp.org=007483041
 
 gov.xzsp.time=36000000
 #30000=30s
