--- a/web/.settings/org.eclipse.core.resources.prefs
+++ b/web/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//web/js/pdfjs/web/locale/zh-CN/viewer.properties=UTF-8
+encoding//web/js/pdfjs/web/locale/zh-TW/viewer.properties=UTF-8
 encoding/<project>=UTF-8
