--- a/DsEp/web/WEB-INF/web.xml
+++ b/DsEp/web/WEB-INF/web.xml
@@ -30,17 +30,36 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<servlet-mapping><servlet-name>springmvc</servlet-name><url-pattern>*.htm</url-pattern></servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>springmvc</servlet-name>
+		<url-pattern>*.htm</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>springmvc-cms</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>springmvc-cms</servlet-name>
+		<url-pattern>*.chtml</url-pattern>
+	</servlet-mapping>
 
 	<servlet><servlet-name>xxx</servlet-name><servlet-class>dswork.web.MyAuthCodeServlet</servlet-class></servlet>
-	<servlet-mapping><servlet-name>xxx</servlet-name><url-pattern>/ValidCode</url-pattern></servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>xxx</servlet-name>
+		<url-pattern>/ValidCode</url-pattern>
+	</servlet-mapping>
 
 
 
 	<listener><listener-class>common.auto.AutoListener</listener-class></listener>
 
 	<filter><filter-name>authFilter</filter-name><filter-class>common.auth.AuthFilter</filter-class></filter>
-	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/ep/*</url-pattern></filter-mapping>
+	<filter-mapping>
+		<filter-name>authFilter</filter-name>
+		<url-pattern>/ep/*</url-pattern>
+	</filter-mapping>
 
 
 
