--- a/DsSSO/sso-client/web/WEB-INF/web.xml
+++ b/DsSSO/sso-client/web/WEB-INF/web.xml
@@ -8,14 +8,9 @@
 		<param-name>log4jConfiguration</param-name>
 		<param-value>classpath:config/log4j2.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
-	</listener>
+	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
 	
-	<filter>
-		<filter-name>websso_logout</filter-name>
-		<filter-class>dswork.sso.WebLogoutFilter</filter-class>
-	</filter>
+	<filter><filter-name>websso_logout</filter-name><filter-class>dswork.sso.WebLogoutFilter</filter-class></filter>
 	<filter-mapping>
 		<filter-name>websso_logout</filter-name>
 		<url-pattern>/logout</url-pattern>
@@ -24,24 +19,19 @@
 	<filter>
 		<filter-name>websso</filter-name>
 		<filter-class>dswork.sso.WebFilter</filter-class>
-		<init-param>
-			<param-name>ssoURL</param-name>
+		<init-param><param-name>ssoURL</param-name>
 			<param-value>http://127.0.0.1:8888/sso/api</param-value>
 		</init-param>
-		<init-param>
-			<param-name>ssoName</param-name>
+		<init-param><param-name>ssoName</param-name>
 			<param-value>cas-client</param-value>
 		</init-param>
-		<init-param>
-			<param-name>ssoPassword</param-name>
+		<init-param><param-name>ssoPassword</param-name>
 			<param-value>1</param-value>
 		</init-param>
-		<init-param>
-			<param-name>loginURL</param-name>
+		<init-param><param-name>loginURL</param-name>
 			<param-value>http://sso-server:8888/sso/login</param-value>
 		</init-param>
-		<init-param>
-			<param-name>ignoreURL</param-name>
+		<init-param><param-name>ignoreURL</param-name>
 			<param-value>/menu.jsp,/m.jsp</param-value>
 		</init-param>
 	</filter>
@@ -61,24 +51,19 @@
 	<filter>
 		<filter-name>DsworkCasAuthFilter</filter-name>
 		<filter-class>dswork.sso.AuthFilter</filter-class>
-		<init-param>
-			<param-name>refreshTime</param-name>
+		<init-param><param-name>refreshTime</param-name>
 			<param-value>3600000</param-value>
 		</init-param>
-		<init-param>
-			<param-name>forbiddenPage</param-name>
+		<init-param><param-name>forbiddenPage</param-name>
 			<param-value>/x/40x.html</param-value>
 		</init-param>
-		<init-param>
-			<param-name>ignorePage</param-name>
+		<init-param><param-name>ignorePage</param-name>
 			<param-value>/menu.jsp,/m.jsp,/index.jsp,/manage/login.htm</param-value>
 		</init-param>
-		<init-param>
-			<param-name>fixSuffix</param-name>
+		<init-param><param-name>fixSuffix</param-name>
 			<param-value>jsp,htm</param-value>
 		</init-param>
-		<init-param>
-			<param-name>checkParam</param-name>
+		<init-param><param-name>checkParam</param-name>
 			<param-value>false</param-value>
 		</init-param>
 	</filter>
@@ -86,7 +71,6 @@
 		<filter-name>DsworkCasAuthFilter</filter-name>
 		<url-pattern>/p/*</url-pattern>
 	</filter-mapping>
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
+
+	<session-config><session-timeout>30</session-timeout></session-config>
 </web-app>
