--- a/DsSSO/sso/web/WEB-INF/web.xml
+++ b/DsSSO/sso/web/WEB-INF/web.xml
@@ -7,41 +7,25 @@
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
+		<init-param><param-name>encoding</param-name><param-value>UTF-8</param-value></init-param>
+		<init-param><param-name>forceEncoding</param-name><param-value>true</param-value></init-param>
 	</filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
+	<filter-mapping><filter-name>encodingFilter</filter-name><url-pattern>/*</url-pattern></filter-mapping>
+
 	<context-param>
 		<param-name>log4jConfiguration</param-name>
 		<param-value>classpath:config/log4j2.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
-	</listener>
-	
+	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-	</listener>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<listener>
-		<listener-class>dswork.sso.listener.SessionListener</listener-class>
-	</listener>
+	<listener><listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class></listener>
+	<listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
+
+	<listener><listener-class>dswork.sso.listener.SessionListener</listener-class></listener>
 	
 	<servlet>
 		<servlet-name>springmvc</servlet-name>
@@ -65,20 +49,12 @@
 		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 	
-	<servlet>
-		<servlet-name>xxx</servlet-name>
-		<servlet-class>dswork.web.MyAuthCodeServlet</servlet-class>
-	</servlet>
+	<servlet><servlet-name>xxx</servlet-name><servlet-class>dswork.web.MyAuthCodeServlet</servlet-class></servlet>
 	<servlet-mapping>
 		<servlet-name>xxx</servlet-name>
 		<url-pattern>/authcode</url-pattern>
 	</servlet-mapping>
 	
-	<session-config>
-		<session-timeout>120</session-timeout>
-	</session-config>
-	
-	<welcome-file-list>
-		<welcome-file>login</welcome-file>
-	</welcome-file-list>
+	<session-config><session-timeout>120</session-timeout></session-config>
+	<welcome-file-list><welcome-file>login</welcome-file></welcome-file-list>
 </web-app>
