--- a/DsSSO/sso-client/web/WEB-INF/web.xml
+++ b/DsSSO/sso-client/web/WEB-INF/web.xml
@@ -31,6 +31,9 @@
 		<init-param><param-name>loginURL</param-name>
 			<param-value>https://192.168.1.47/sso/login</param-value>
 		</init-param>
+		<init-param><param-name>logoutURL</param-name>
+			<param-value>https://192.168.1.47/sso/logout</param-value>
+		</init-param>
 		<init-param><param-name>ignoreURL</param-name>
 			<param-value>/menu.jsp,/m.jsp</param-value>
 		</init-param>
