--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -39,7 +39,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&allowMultiQueries=true
 #jdbc.username=UserId
 #jdbc.password=Password
 
