--- a/DsWorkJava/dswork.config/config/config.properties
+++ b/DsWorkJava/dswork.config/config/config.properties
@@ -32,7 +32,7 @@ jdbc.password=demo
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&allowMultiQueries=true
 #jdbc.username=UserId
 #jdbc.password=Password
 
