--- a/DsSSO/portal/web/WEB-INF/web.xml
+++ b/DsSSO/portal/web/WEB-INF/web.xml
@@ -42,7 +42,6 @@
 		<url-pattern>/frame/*</url-pattern>
 	</filter-mapping>
 	
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+	<session-config><session-timeout>120</session-timeout></session-config>
+	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
