--- a/DsWorkJava/web/WEB-INF/web.xml
+++ b/DsWorkJava/web/WEB-INF/web.xml
@@ -4,22 +4,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <filter>
-    	<filter-name>encodingFilter</filter-name>
-    	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    	<init-param>
-    		<param-name>encoding</param-name>
-    		<param-value>UTF-8</param-value>
-    	</init-param>
-    	<init-param>
-    		<param-name>forceEncoding</param-name>
-    		<param-value>true</param-value>
-    	</init-param>
-    </filter>
-    <filter-mapping>
-    	<filter-name>encodingFilter</filter-name>
-    	<url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param><param-name>encoding</param-name><param-value>UTF-8</param-value></init-param>
+		<init-param><param-name>forceEncoding</param-name><param-value>true</param-value></init-param>
+	</filter>
+	<filter-mapping><filter-name>encodingFilter</filter-name><url-pattern>/*</url-pattern></filter-mapping>
+
     
 	<!--
 	各种web服务器默认Servlet的名字 ：
@@ -29,9 +21,12 @@
 		WebLogic："FileServlet"
 		WebSphere："SimpleFileServlet"
 	-->
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.bcmap</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.bmp</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.css</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.doc</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.docx</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.eot</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.gif</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.htc</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.html</url-pattern></servlet-mapping>
@@ -39,9 +34,21 @@
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.jpg</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.js</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.json</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.mpp</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.pdf</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.png</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.ppt</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.pptx</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.properties</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.svg</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.swf</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.ttf</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.vsd</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.vsdx</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.woff</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xap</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xls</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xlsx</url-pattern></servlet-mapping>
 	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xml</url-pattern></servlet-mapping>
 	<!--
 	<context-param>
@@ -53,31 +60,25 @@
 		<param-value>/WEB-INF/classes/config/log4j.properties</param-value>
 	</context-param>
 	-->
+
 	<context-param>
 		<param-name>log4jConfiguration</param-name>
 		<param-value>classpath:config/log4j2.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
-	</listener>
-	
+	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-	</listener>
+	<listener><listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class></listener>
+	<listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
 	<!--
 	<listener>
 		<description>log4j</description>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 	-->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
 	<!-- 使Spring支持request与session的scope,如:<bean id="loginAction" class="com.foo.LoginAction" scope="request"/> -->
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
@@ -109,24 +110,13 @@
 		<servlet-name>springmvc</servlet-name>
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
-    
-	<error-page>
-		<error-code>403</error-code>
-		<location>/commons/403.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>404</error-code>
-		<location>/commons/404.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/commons/500.jsp</location>
-	</error-page>
-    <!-- session超时定义,单位为分钟 -->
-    <session-config>
-    	<session-timeout>30</session-timeout>
-    </session-config>
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+
+
+
+	<error-page><error-code>403</error-code><location>/commons/403.jsp</location></error-page>
+	<error-page><error-code>404</error-code><location>/commons/404.jsp</location></error-page>
+	<error-page><error-code>500</error-code><location>/commons/500.jsp</location></error-page>
+	<!-- session超时定义,单位为分钟 -->
+	<session-config><session-timeout>120</session-timeout></session-config>
+	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
