--- a/DsDemo/DemoJava/web/WEB-INF/web.xml
+++ b/DsDemo/DemoJava/web/WEB-INF/web.xml
@@ -58,9 +58,9 @@
 	</servlet-mapping>
 
 	
-	<error-page><error-code>403</error-code><location>/commons/403.jsp</location></error-page>
-	<error-page><error-code>404</error-code><location>/commons/404.jsp</location></error-page>
-	<error-page><error-code>500</error-code><location>/commons/500.jsp</location></error-page>
+	<error-page><error-code>400</error-code><location>/commons/50x.html</location></error-page>
+	<error-page><error-code>404</error-code><location>/commons/404.html</location></error-page>
+	<error-page><error-code>500</error-code><location>/commons/50x.jsp</location></error-page>
 	<session-config><session-timeout>120</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
