--- a/DsDemo/DemoJava/web/WEB-INF/web.xml
+++ b/DsDemo/DemoJava/web/WEB-INF/web.xml
@@ -57,10 +57,10 @@
 		<url-pattern>/ValidCode</url-pattern>
 	</servlet-mapping>
 
-	
-	<error-page><error-code>400</error-code><location>/commons/50x.html</location></error-page>
-	<error-page><error-code>404</error-code><location>/commons/404.html</location></error-page>
+	<error-page><error-code>400</error-code><location>/commons/50x.jsp</location></error-page>
+	<error-page><error-code>404</error-code><location>/commons/50x.jsp</location></error-page>
 	<error-page><error-code>500</error-code><location>/commons/50x.jsp</location></error-page>
+	
 	<session-config><session-timeout>120</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
