--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -35,9 +35,11 @@
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
 
-	<error-page><error-code>403</error-code><location>/commons/403.jsp</location></error-page>
-	<error-page><error-code>404</error-code><location>/commons/404.jsp</location></error-page>
-	<error-page><error-code>500</error-code><location>/commons/500.jsp</location></error-page>
+
+
+	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>500</error-code><location>/50x.jsp</location></error-page>
 	<session-config><session-timeout>120</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
