--- a/DsSSO/sso-client/web/WEB-INF/web.xml
+++ b/DsSSO/sso-client/web/WEB-INF/web.xml
@@ -56,6 +56,11 @@
 		<url-pattern>/p/*</url-pattern>
 	</filter-mapping>
 
+
+
+	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>500</error-code><location>/50x.jsp</location></error-page>
 	<session-config><session-timeout>120</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
