--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="dswork.config"/>
 	<classpathentry kind="src" path="dswork.core"/>
 	<classpathentry kind="src" path="dswork.http"/>
-	<classpathentry kind="src" path="dswork.jdbc4"/>
+	<classpathentry kind="src" path="dswork.jdbc"/>
 	<classpathentry kind="src" path="dswork.mvc"/>
 	<classpathentry kind="src" path="dswork.ognl"/>
 	<classpathentry kind="src" path="dswork.spring"/>
