--- a/search/src/config/config.properties
+++ b/search/src/config/config.properties
@@ -4,3 +4,4 @@ dswork.lucene.size=100
 dswork.lucene.search=E:/a/
 dswork.lucene.index=
 dswork.lucene.domain=http://www.gzly.gov.cn/a
+dswork.lucene.refreshtime=86400000
