--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -31,7 +31,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dswork.sso.jar">
+	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
