--- a/DsSSO/portal/.classpath
+++ b/DsSSO/portal/.classpath
@@ -41,12 +41,17 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dswork.sso.jar">
+	<classpathentry kind="lib" path="/Lib/common/log/slf4j-api-1.7.21.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/common/log/slf4j-api-1.7.21.jar">
+	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.authfilter.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
