--- a/DsSSO/portal/web/WEB-INF/web.xml
+++ b/DsSSO/portal/web/WEB-INF/web.xml
@@ -30,12 +30,13 @@
 	<filter>
 		<filter-name>websso</filter-name>
 		<filter-class>dswork.sso.WebFilter</filter-class>
-		<init-param><param-name>ssoURL</param-name>     <param-value>https://127.0.0.1/sso/api</param-value></init-param>
+		<init-param><param-name>ssoURL</param-name>     <param-value>http://127.0.0.1:8888/sso/api</param-value></init-param>
 		<init-param><param-name>ssoName</param-name>    <param-value>portal</param-value></init-param>
 		<init-param><param-name>ssoPassword</param-name><param-value>1</param-value></init-param>
 		<init-param><param-name>loginURL</param-name>   <param-value>https://192.168.1.47/sso/login</param-value></init-param>
 		<init-param><param-name>logoutURL</param-name>  <param-value>https://192.168.1.47/sso/logout</param-value></init-param>
 		<init-param><param-name>ignoreURL</param-name>  <param-value>/menu.jsp,/m.jsp</param-value></init-param>
+		<init-param><param-name>sameDomain</param-name> <param-value>false</param-value></init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>websso</filter-name>
