上传封装逻辑优化，增加回调函数

--- a/web/src/config/config.properties
+++ b/web/src/config/config.properties
@@ -1,5 +1,5 @@
 ######## jskeyupload
-jskey.upload.savePath=C:/DsworkUploadTemp
+jskey.upload.savePath=/DsworkUploadTemp
 #jskey.upload.maxSize=bit
 jskey.upload.maxSize=10485760
 jskey.upload.image=jpg,jpeg,gif,png
