--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -16,7 +16,7 @@ gov.xzsp.sendurl=http://127.0.0.1:8888/xzsp/send.jsp
 
 
 ######## jskeyupload
-jskey.upload.savePath=C:/DsworkUploadTemp
+jskey.upload.savePath=/DsworkUploadTemp
 #jskey.upload.maxSize=bit
 jskey.upload.maxSize=10485760
 jskey.upload.image=jpg,jpeg,gif,png
