--- a/DsSSO/sso/web/WEB-INF/web.xml
+++ b/DsSSO/sso/web/WEB-INF/web.xml
@@ -46,6 +46,14 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
+		<url-pattern>/password</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>springmvc</servlet-name>
+		<url-pattern>/passwordAction</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>springmvc</servlet-name>
 		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 	
