--- a/DsSSO/sso-client/web/WEB-INF/web.xml
+++ b/DsSSO/sso-client/web/WEB-INF/web.xml
@@ -23,10 +23,10 @@
 		<filter-name>websso</filter-name>
 		<filter-class>dswork.sso.WebFilter</filter-class>
 		<init-param><param-name>ssoURL</param-name>     <param-value>http://127.0.0.1:8888/sso/api</param-value></init-param>
-		<init-param><param-name>ssoName</param-name>    <param-value>portal</param-value></init-param>
+		<init-param><param-name>ssoName</param-name>    <param-value>sso-client</param-value></init-param>
 		<init-param><param-name>ssoPassword</param-name><param-value>1</param-value></init-param>
-		<init-param><param-name>loginURL</param-name>   <param-value>https://192.168.1.47/sso/login</param-value></init-param>
-		<init-param><param-name>logoutURL</param-name>  <param-value>https://192.168.1.47/sso/logout</param-value></init-param>
+		
+		<init-param><param-name>webURL</param-name>     <param-value>https://sso-server/sso</param-value></init-param>
 		<init-param><param-name>ignoreURL</param-name>  <param-value>/menu.jsp,/m.jsp</param-value></init-param>
 		<init-param><param-name>sameDomain</param-name> <param-value>true</param-value></init-param>
 	</filter>
