--- a/search/.classpath
+++ b/search/.classpath
@@ -38,7 +38,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/module/gson/gson-2.3.1.jar">
+	<classpathentry kind="lib" path="/Lib/module/json/gson/gson-2.3.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
