--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="dswork.config"/>
-	<classpathentry kind="src" path="dswork.core"/>
+	<classpathentry excluding="dswork/core/upload/jspsmart/" kind="src" path="dswork.core"/>
 	<classpathentry kind="src" path="dswork.http"/>
 	<classpathentry kind="src" path="dswork.jdbc"/>
 	<classpathentry kind="src" path="dswork.mvc"/>
