--- a/webio/src/config/config.properties
+++ b/webio/src/config/config.properties
@@ -1,5 +1,16 @@
-######## webio for jskeyupload
-webio.path=C:/WebIO
+######## just for WebioUtil
+webio.path=/WorkServer/WebIO
 webio.maxsize=20971520
 webio.image=jpg,jpeg,gif,png
 webio.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
+
+######## just for WebioTempUtil
+webiotemp.clear=true
+webiotemp.timeout=21600000
+
+######## web temp for JskeyUpload And for WebioTempUtil
+jskey.upload.savePath=/WorkServer/WebIO/temp
+jskey.upload.maxSize=10485760
+jskey.upload.image=jpg,jpeg,gif,png
+jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
+
