--- a/webio/web/Config/properties.config
+++ b/webio/web/Config/properties.config
@@ -5,4 +5,14 @@
 	<add key="webio.maxsize" value="20971520"/>
 	<add key="webio.image" value="jpg,jpeg,gif,png"/>
 	<add key="webio.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
+
+	<!--just for webio-->
+	<add key="jskey.upload.clear" value="true"/>
+	<add key="jskey.upload.timeout" value="21600000"/>
+	
+	<!--web temp for jskeyupload-->
+	<add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
+	<add key="jskey.upload.maxSize" value="10485760"/>
+	<add key="jskey.upload.image" value="jpg,jpeg,gif,png"/>
+	<add key="jskey.upload.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
 </settings>
