--- a/DsWorkNet/Dswork.Web/Dswork.Web.csproj
+++ b/DsWorkNet/Dswork.Web/Dswork.Web.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyCookie.cs" />
+    <Compile Include="MyFile.cs" />
     <Compile Include="MyRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
