--- a/webio/web/Config/properties.config
+++ b/webio/web/Config/properties.config
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <settings>
-	<!--webio for jskeyupload-->
-	<add key="webio.path" value="C:/WebIO"/>
+	<!--just for WebioUtil-->
+	<add key="webio.path" value="/WorkServer/WebIO"/>
 	<add key="webio.maxsize" value="20971520"/>
 	<add key="webio.image" value="jpg,jpeg,gif,png"/>
 	<add key="webio.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
 
-	<!--just for webio-->
-	<add key="jskey.upload.clear" value="true"/>
-	<add key="jskey.upload.timeout" value="21600000"/>
+	<!--just for WebioTempUtil-->
+	<add key="webiotemp.clear" value="true"/>
+	<add key="webiotemp.timeout" value="21600000"/>
 	
-	<!--web temp for jskeyupload-->
-	<add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
-	<add key="jskey.upload.maxSize" value="10485760"/>
+	<!--web temp for JskeyUpload And for WebioTempUtil-->
+	<add key="jskey.upload.savePath" value="/WorkServer/WebIO/temp"/>
+	<add key="jskey.upload.maxSize" value="20971520"/>
 	<add key="jskey.upload.image" value="jpg,jpeg,gif,png"/>
 	<add key="jskey.upload.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
 </settings>
