--- a/xzsp/web/WEB-INF/web.xml
+++ b/xzsp/web/WEB-INF/web.xml
@@ -25,8 +25,12 @@
 	<listener><listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class></listener>
 	<listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
 
-	<listener><listener-class>common.automatic.AutoListener</listener-class></listener>
-
+	<servlet>
+		<servlet-name>auto</servlet-name>
+		<servlet-class>common.auto.AutoServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
 	<session-config><session-timeout>1</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 </web-app>
