--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -42,4 +42,29 @@
 	<error-page><error-code>500</error-code><location>/50x.jsp</location></error-page>
 	<session-config><session-timeout>120</session-timeout></session-config>
 	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
+
+
+	<filter>
+		<filter-name>websso_logout</filter-name>
+		<filter-class>dswork.sso.WebLogoutFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>websso_logout</filter-name>
+		<url-pattern>/logout</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>websso</filter-name>
+		<filter-class>dswork.sso.WebFilter</filter-class>
+		<init-param><param-name>ssoURL</param-name>     <param-value>http://127.0.0.1:8888/sso/api</param-value></init-param>
+		<init-param><param-name>ssoName</param-name>    <param-value>DsCommon</param-value></init-param>
+		<init-param><param-name>ssoPassword</param-name><param-value>abc123456</param-value></init-param>
+		<init-param><param-name>webURL</param-name>     <param-value>https://sso-server/sso</param-value></init-param>
+		<init-param><param-name>ignoreURL</param-name>  <param-value>/menu.jsp</param-value></init-param>
+		<init-param><param-name>sameDomain</param-name> <param-value>true</param-value></init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>websso</filter-name>
+		<url-pattern>/common/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
