--- a/DsSSO/portal/.classpath
+++ b/DsSSO/portal/.classpath
@@ -56,6 +56,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/common/log/slf4j-api-1.7.22.jar"/>
+	<classpathentry kind="lib" path="/Lib/common/log/slf4j-api-1.7.22.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
