--- a/DsSSO/sso/src/config/config.properties
+++ b/DsSSO/sso/src/config/config.properties
@@ -1,6 +1,6 @@
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&useSSL=false
 jdbc.username=dswork
 jdbc.password=dswork
