--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -39,7 +39,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 #jdbc.username=UserId
 #jdbc.password=Password
 
@@ -47,7 +47,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #mybatis.dialect=tecamo.core.mybatis.dialect.SQLServer2000Dialect
 #jdbc.driverClassName=com.microsoft.jdbc.sqlserver.SQLServerDriver
-#jdbc.url=jdbc:microsoft:sqlserver://localhost:1433; DatabaseName=demo
+#jdbc.url=jdbc:microsoft:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
@@ -55,7 +55,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 #mybatis.dialect=tecamo.core.mybatis.dialect.SQLServerDialect
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=demo
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
@@ -63,6 +63,6 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 #mybatis.dialect=tecamo.core.mybatis.dialect.SQLServer2012Dialect
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=demo
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
