--- a/CodeBuilder.freemarker/freemarker/build.xml
+++ b/CodeBuilder.freemarker/freemarker/build.xml
@@ -4,9 +4,9 @@
 	<java classname="codebuilder.freemarker.Builder" fork="true">
 		<arg value="test.xml" />
 		<classpath>
-			<pathelement path="./freemarker/lib/Builder.jar" />
-			<pathelement path="./freemarker/lib/freemarker.jar" />
-			<pathelement path="./freemarker/lib/mysql-connector-java-5.1.41-bin.jar" />
+			<pathelement path="./lib/Builder.jar" />
+			<pathelement path="./lib/freemarker.jar" />
+			<pathelement path="./lib/mysql-connector-java-5.1.41-bin.jar" />
 		</classpath>
 		<sysproperty key="file.encoding" value="UTF-8" />
 	</java>
