cms去掉栏目目录配置

--- a/DsEp/web/WEB-INF/web.xml
+++ b/DsEp/web/WEB-INF/web.xml
@@ -54,9 +54,14 @@
 
 
 	<filter><filter-name>authFilter</filter-name><filter-class>common.auth.AuthFilter</filter-class></filter>
-	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/ep/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/manage/*</url-pattern></filter-mapping>
+	
+	<filter>
+		<filter-name>authOwnFilter</filter-name>
+		<filter-class>common.authown.AuthOwnFilter</filter-class>
+	</filter>
+	<filter-mapping><filter-name>authOwnFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
 
 
 
